--- a/Pt2_Site_Genis/index.html
+++ b/Pt2_Site_Genis/index.html
@@ -8,6 +8,18 @@
   </head>
 
   <body>
+	<nav class="navbar navbar-inverse">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">STAHWARS</a>
+	    </div>
+	    <ul class="nav navbar-nav">
+	      <li class="active"><a href="index.html">Starwars movies</a></li>
+	      <li><a href="add-movie/index.html">Add movie</a></li>
+	    </ul>
+	  </div>
+	</nav>
+
   	<div class="container">
 	    <section>
 	      <h1>Star Wars Movies</h1>
